# retroboy

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build-wasm.sh  build.sh
.github/workflows/: deploy.yml
frontends/headless/: Cargo.toml
frontends/json_test_runner/: Cargo.toml
frontends/sdl/: Cargo.toml
frontends/web/: .eslintrc  .prettierignore  .prettierrc  package.json  sample.env
gameboy_emulator/src/: cpu.rs  emulator.rs  gpu.rs  keys.rs  lib.rs  mmu.rs  utils.rs
src/: address_bus.rs  apu.rs  bios.rs  cheats.rs  cpu.rs  dma.rs  emulator.rs  gpu.rs  joypad.rs  keys.rs  lib.rs  main.rs  mmu.rs  save_state.rs  serial.rs  serializable.rs  speed_switch.rs  utils.rs  wasm.rs
src/address_bus/: bank_utils.rs  cartridge.rs  cheats.rs  constants.rs  dma.rs  effects.rs  hdma.rs  huc1.rs  mbc1.rs  mbc3.rs  mbc5.rs  mbc_rom_only.rs  speed_switch.rs  tests.rs
src/apu/: blep.rs  envelope.rs  length.rs  noise.rs  period.rs  pulse.rs  sweep.rs  tests.rs  utils.rs  wave.rs
src/cpu/: alu.rs  bitops.rs  hdma.rs  interrupts.rs  jumps.rs  loads.rs  microops.rs  opcodes.rs  timers.rs
src/dma/: oam.rs  tests.rs  vram.rs
src/emulator/: save_state.rs
src/gpu/: background.rs  colors.rs  constants.rs  line_addressing.rs  oam_bug.rs  palettes.rs  prioritization.rs  scanline.rs  sprites.rs  tests.rs  utils.rs  window.rs
src/keys/: tests.rs
src/mmu/: bank_utils.rs  cartridge.rs  constants.rs  effects.rs  huc1.rs  mbc1.rs  mbc3.rs  mbc5.rs  mbc_rom_only.rs  rtc.rs  tests.rs
src/utils/: tests.rs
src/wasm/: api.rs  emulator_settings.rs  rom_metadata.rs  (+3 more)
(+90 files in other folders)
