workspace = { members = ["frontends/json_test_runner", "tools/serializable_derive"] }

[package]
name = "retroboy"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
serializable_derive = { path = "./tools/serializable_derive" }
getset = "0.1.6"
